deploy/api/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      nodePort: 32080
      targetPort: 8080
