deploy/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: res-edge
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
