deploy/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: res-edge
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              number: 8080
